# nautilus

./: .gitignore  .gitlab-ci.yml  README.md  config.example.cfg  dev.sh  pyproject.toml
ci/: main.py
nautilus/: __init__.py  nautilus.py
nautilus/classes/: command.py  param.py  user.py
nautilus/commands/: general.py  song_requests.py  streamers.py
nautilus/services/: streamers.py
nautilus/tests/: test_classes.py
nautilus/tests/utils/: func.py
nautilus/utils/: classes.py  decorators.py  exceptions.py  func.py  strings.py
